--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -139,7 +139,8 @@
       
       
                   
-                  <button type="button" (click)="saveNewProduct()">Añadir</button>
+                  <button type="button" 
+                 class="button_main" (click)="saveNewProduct()">Añadir</button>
                 </form>
             </div>
 
