--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -32,7 +32,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <img src="./assets/img/pexels-chuanyu2015-209658-2231469.jpg" alt="">
-                    <div class="titleCard">Pollen</div>
+                    <div class="titleCard">Polen</div>
                     <div class="overlay"></div>
                 </div>
                 <div class="product-info">
